--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Nov 03 19:47:58 CET 2020
-sdk.dir=C\:\\Users\\SEBAS\\AppData\\Local\\Android\\Sdk
+#Wed May 10 14:26:45 CEST 2023
+sdk.dir=/Users/suso/Library/Android/sdk
