ya esta todo en orden

--- a/local.properties
+++ b/local.properties
@@ -4,15 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-<<<<<<< HEAD
-#Wed May 10 14:26:45 CEST 2023
+#Wed May 10 19:24:51 CEST 2023
+=\=\=\=\=\=\=
 sdk.dir=/Users/suso/Library/Android/sdk
-=======
-<<<<<<< Updated upstream
-#Wed May 10 14:26:45 CEST 2023
-sdk.dir=/Users/suso/Library/Android/sdk
-=======
-#Wed May 10 14:27:23 CEST 2023
-sdk.dir=/Users/luciallanaalfonso/Library/Android/sdk
->>>>>>> Stashed changes
->>>>>>> main
+>>>>>>>=main
+<<<<<<<=Updated upstream
